@@ -12,7 +12,12 @@ import com.fasterxml.jackson.annotation.JsonProperty;
 import com.powsybl.metrix.mapping.exception.DataTableException;
 import org.apache.commons.lang3.StringUtils;
 
-import java.util.*;
+import java.util.ArrayList;
+import java.util.Collections;
+import java.util.HashSet;
+import java.util.List;
+import java.util.Map;
+import java.util.Set;
 import java.util.stream.Collectors;
 
 /**
@@ -184,7 +189,7 @@ public class DataTable {
         checkColumnNames(selectedColumn);
         DataTable filteredDataTable = filter(List.of(selectedColumn), filter);
         List<String> values = filteredDataTable.data(selectedColumn);
-        return values.isEmpty() ? null : values.get(0);
+        return values.isEmpty() ? null : values.getFirst();
     }
 
     public List<String> searchValueList(String selectedColumn, Map<String, List<String>> filter) {
